fix - align text on submit button to center

--- a/assets/sass/sections/fale-conosco.scss
+++ b/assets/sass/sections/fale-conosco.scss
@@ -132,10 +132,8 @@
             color: $c7;
             font-size: 1.026rem;
             font-weight: 700;
-            display: flex;
-            justify-content: center;
+            display: block;
             margin-left: auto;
-            align-items: center;
             cursor: pointer;
             border-radius: 5px;
             transition: background .5s;
